Add server configurations.

--- a/development.cfg
+++ b/development.cfg
@@ -110,9 +110,9 @@ paths =
 # For the gunicorn port, check on the server in the other sites as
 # there should be no overlap. And simply give the supervisor port one
 # number higher.
-gunicorn-port = TODO
-supervisor-port = TODO
-sitename = TODO
+gunicorn-port = 9000
+supervisor-port = 9009
+sitename = spoc.staging.lizard.net
 workers = 3
 
 
