Change supervisor's arguments for gunicorn command.

--- a/server.cfg
+++ b/server.cfg
@@ -43,7 +43,7 @@ port = ${serverconfig:supervisor-port}
 user = sdfsdfsdf
 password = aosdifsdf
 programs =
-      10 gunicorn ${buildout:bin-directory}/django [run_gunicorn --workers=${serverconfig:workers} --timeout 90 127.0.0.1:${serverconfig:gunicorn-port} --preload --max-requests=${serverconfig:maxrequests}]
+      10 gunicorn ${buildout:bin-directory}/django [run_gunicorn 127.0.0.1:${serverconfig:gunicorn-port} --workers=${serverconfig:workers} --timeout 90 --preload --max-requests=${serverconfig:maxrequests}]
 
 
 [supervisor-cronjob]
