--- a/staging.cfg
+++ b/staging.cfg
@@ -6,6 +6,6 @@ parts +=
     django-session-cleanup-cronjob
 
 
-[django]
+#[django]
 # Use the staging settings instead of developmentsettings.
-settings = stagingsettings
+#settings = stagingsettings
