--- a/development.cfg
+++ b/development.cfg
@@ -51,6 +51,7 @@ createcoverage = 1.2
 django-celery = 3.1.10
 django-extensions = 1.3.7
 django-nose = 1.2
+django-pygments = 0.1
 djangorecipe = 1.9
 djangorestframework = 2.3.13
 docutils = 0.11
