--- a/development.cfg
+++ b/development.cfg
@@ -35,7 +35,6 @@ zc.recipe.egg = 2.0.0a3
 Django = 1.6.5
 Fabric = 1.8.3
 Jinja2 = 2.7.2
-Pygments = 1.6
 Sphinx = 1.2.2
 Werkzeug = 0.9.4
 amqp = 1.4.5
@@ -51,7 +50,6 @@ createcoverage = 1.2
 django-celery = 3.1.10
 django-extensions = 1.3.7
 django-nose = 1.2
-django-pygments = 0.1
 djangorecipe = 1.9
 djangorestframework = 2.3.13
 docutils = 0.11
@@ -76,6 +74,9 @@ South = 0.8.4
 supervisor = 3.0
 z3c.recipe.mkdir = 0.6
 zest.releaser = 3.50
+Pygments = 1.6
+django-jsonfield = 0.9.12
+django-pygments = 0.1
 
 
 [sources]
