--- a/development.cfg
+++ b/development.cfg
@@ -41,6 +41,7 @@ amqp = 1.4.5
 anyjson = 0.3.3
 billiard = 3.3.0.17
 celery = 3.1.11
+cx-Oracle = 5.1.3
 collective.recipe.omelette = 0.16
 collective.recipe.sphinxbuilder = 0.8.2
 collective.recipe.supervisor = 0.19
