--- a/development.cfg
+++ b/development.cfg
@@ -48,6 +48,7 @@ collective.recipe.supervisor = 0.19
 collective.recipe.template = 1.11
 coverage = 3.7.1
 createcoverage = 1.2
+dbfpy = 2.3.0
 django-celery = 3.1.10
 django-extensions = 1.3.7
 django-nose = 1.2
