Add validation fields.

--- a/server.cfg
+++ b/server.cfg
@@ -42,6 +42,7 @@ recipe = collective.recipe.supervisor
 port = ${serverconfig:supervisor-port}
 user = sdfsdfsdf
 password = aosdifsdf
+environment = "LD_LIBRARY_PATH=/usr/lib/oracle/12.1/client64/lib/:$LD_LIBRARY_PATH","ORACLE_HOME=/usr/lib/oracle/12.1/client64"
 programs =
       10 gunicorn ${buildout:bin-directory}/django [run_gunicorn 127.0.0.1:${serverconfig:gunicorn-port} --workers=${serverconfig:workers} --timeout 90 --preload --max-requests=${serverconfig:maxrequests}]
 
