--- a/development.cfg
+++ b/development.cfg
@@ -33,6 +33,7 @@ zc.recipe.egg = 2.0.0a3
 
 # Reported by buildout.
 Django = 1.6.5
+CherryPy = 3.5.0
 Fabric = 1.8.3
 Jinja2 = 2.7.2
 Sphinx = 1.2.2
